# 2

./: .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md  TDL  config.toml  configure  exclusions.txt  install.sh  launch.sh  release.sh  repo_priority.txt  uninstall.sh
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug.md  docs.md  unreachable-error.md
completions/: bash  fish  zsh
crates/two/: Cargo.toml  README.md
crates/two/src/: main.rs
crates/two/src/globals/: mod.rs
crates/twocomms/: Cargo.toml
crates/twocomms/src/: io.rs  lib.rs
crates/twoconfig/: Cargo.toml
crates/twoconfig/src/: lib.rs
crates/twodebug/: Cargo.toml
crates/twodebug/src/: lib.rs
crates/twoerror/: Cargo.toml
crates/twoerror/src/: lib.rs
crates/twolib/: Cargo.toml
crates/twolib/src/: ambiguity.rs  hash.rs  lib.rs  par.rs  repo.rs  time.rs
crates/twolib/src/cli/: args.rs  mod.rs
crates/twolib/src/package/: dl.rs  history.rs  methods.rs  mod.rs  parse.rs  provides.rs  stats.rs
crates/twolib/src/package/remove/: logic.rs  manifest.rs  mod.rs
crates/twolib/src/package/upstream/: core.rs  mod.rs
crates/twolib/src/pm/: endpoints.rs  mod.rs
crates/twolib/src/set/: mod.rs
crates/twosh/: Cargo.toml
crates/twosh/src/: fs.rs  lib.rs  sh.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  standards.md
docs/src/advanced/: 2lkit.md  README.md
docs/src/advanced/pkg/: auxiliary.md  chaser.md  creating.md  custom.md  revising.md  updating.md
docs/src/advanced/ports/: README.md  auxiliary.md  creating.md  maintaining.md  moving.md  revising.md  updating.md  upstream.md
docs/src/advanced/ports/anatomy/: README.md  build.md  changelog.md  lock.md
docs/src/advanced/repos/: README.md  creating.md  deleting.md
docs/src/start/: README.md  configuring.md  install.md  uninstall.md
docs/src/tips/: README.md  less.md  lfs.md  repotarballs.md
docs/src/usage/: README.md
docs/src/usage/flags/: README.md  afterword.md  generic.md  package.md  special.md
docs/src/usage/repo/: adding.md  syncing.md
docs/src/usage/repos/: README.md  adding.md  listing.md  syncing.md  using.md
docs/src/usage/set/: adding.md  creating.md  listing.md  removing.md  special.md  updating.md
docs/src/usage/sets/: README.md  adding.md  special.md  using.md
envs/: cmake  core  meson  ninja  pip  rust  xorg
etc/: config.toml  exclusions.txt
scripts/: b-32cfg  b-32cmake  b-32mi  b-32ms  b-32ni  b-cfg  b-cmake  b-make  b-mi  b-ms  b-ni  b-ninja  b-patch  b-pipbuild  b-pipinstall  e-core  e-rust  e-xorg  f-core  f-path  m-add  m-gen  m-move  m-newrepo  m-rev  m-upd  u-hash  u-val
src/: macros.rs  main.rs
src/cli/: args.rs  mod.rs  version.rs
src/comms/: in.rs  log.rs  mod.rs  out.rs
src/fetch/: download.rs  mod.rs
src/globals/: config.rs  flags.rs  mod.rs
src/package/: ambiguity.rs  endpoints.rs  history.rs  mod.rs  parse.rs  provides.rs  repos.rs  sets.rs  stats.rs  traits.rs
src/pm/: endpoints.rs  mod.rs
src/remove/: logic.rs  manifest.rs  mod.rs
src/shell/: cmd.rs  fs.rs  mod.rs
src/upstream/: core.rs
src/utils/: comms.rs  die.rs  esc.rs  fail.rs  hash.rs  logger.rs  mod.rs  par.rs  time.rs
