cargo-features = ["edition2024"]

[package]
name = "two"
version = "0.0.71" # refactoring (package.data.port_dir added)
edition = "2024"
description = "A source-based package manager for LFS"
repository = "https://github.com/Toxikuu/2"
license = "GPL-3.0"
readme = "README.md"
categories = [ "command line utilities" ]
keywords = [
  "two",
  "2",
  "package manager",
]

[features]
default = [ "upstream", "parallelism" ]
upstream = []
parallelism = [ "dep:rayon" ]

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
indicatif = "0.17.9"
libc = "0.2.169"
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.1"
sha2 = "0.10.8"
toml = "0.8.19"
walkdir = "2.5.0"

[dependencies.clap]
version = "4.5.23"
features = [ "derive" ]

[dependencies.rayon]
version = "1.10.0"
optional = true

[dependencies.serde]
version = "1.0.216"
features = [
  "derive",
  "rc",
]

[dependencies.ureq]
version = "3.0.2"

[dependencies.log4rs]
version = "1.3.0"
default-features = false
features = [
  "compound_policy",
  "file_appender",
  "chrono",
  "threshold_filter",
]
