[package]
name = "two"
version = "0.0.96" # see CHANGES.md
authors = [ "Toxikuu" ]
edition = "2024"
description = "A source-based package manager for LFS"
homepage = "https://github.com/Toxikuu/2"
repository = "https://github.com/Toxikuu/2.git"
license = "GPL-3.0"
readme = "README.md"
categories = [ "command-line-utilities" ]
keywords = [
  "two",
  "2",
  "package manager",
]

[features]
default = [ "upstream", "parallelism" ]
upstream = []
parallelism = [ "dep:rayon" ]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"

[dependencies]
anyhow = "1"
base64 = "0.22"
indicatif = "0"
libc = "0.2"
once_cell = "1"
regex = "1"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dependencies.clap]
version = "4.5"
features = [ "derive" ]

[dependencies.rayon]
version = "1"
optional = true

[dependencies.serde]
version = "1"
features = [
  "derive",
  "rc",
]

[dependencies.ureq]
version = "3"
