[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = [ "derive" ] }
indicatif = "0"
libc = "0.2"
once_cell = "1"
regex = "1"
serde = { version = "1", features = [ "derive", "rc" ] }
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
ureq = "3"
walkdir = "2"
rayon =  "1"

[workspace.features]
default = [ "upstream", "parallelism" ]
parallelism = [ "twopm/upstream" ]
upstream = [ "twoconfig/upstream", "twolib/upstream" ]
