[package]
name = "two"
version = "0.1.0" # see CHANGES.md
authors = [ "Toxikuu" ]
edition = "2024"
description = "A source-based package manager for LFS"
homepage = "https://github.com/Toxikuu/2"
repository = "https://github.com/Toxikuu/2.git"
license = "GPL-3.0"
readme = "README.md"
categories = [ "command-line-utilities" ]
keywords = [
  "two",
  "2",
  "package manager",
]

[features]
default = [ "upstream" ]
upstream = []

# [profile.release]
# opt-level = 3
# strip = "symbols"
# lto = "thin"

[dependencies]
anyhow.workspace = true
indicatif.workspace = true
libc = "0.2"
once_cell = "1"
regex = "1"
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir.workspace = true
clap.workspace = true
serde.workspace = true
ureq.workspace = true
twoerror = { path = "../twoerror" }
twoconfig = { path = "../twoconfig" }
twolib = { path = "../twolib" }
twosh = { path = "../twosh" }
twodebug = { path = "../twodebug" }
twocomms = { path = "../twocomms" }
