[package]
name = "twolib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
walkdir.workspace = true
toml.workspace = true
ureq.workspace = true
once_cell.workspace = true
clap.workspace = true
sha2.workspace = true
base64.workspace = true
indicatif.workspace = true
rayon.workspace = true
twoerror = { path = "../twoerror" }
twoconfig = { path = "../twoconfig" }
twocomms = { path = "../twocomms" }
twosh = { path = "../twosh" }
twodebug = { path = "../twodebug" }

[features]
default = [ "upstream", "parallelism" ]
upstream = []
parallelism = []
